<resources>
    <string name="app_name">studyManager</string>
    <string name="username">Username</string>
    <string name="textview">textview</string>
    <string name="click_to_see_available_sections">click_to_see_available_sections</string>
    <string name="previous_page">previous_page</string>
    <string name="enter_the_name_of_the_course">enter_the_name_of_the_course</string>
    <string name="save" />
    <string name="enter_the_note_here" />
    <string name="class_creator">class_creator</string>
    <string name="what_is_the_start_date">what_is_the_start_date</string>
    <string name="what_is_end_date">what_is_end_date</string>
    <string name="start_time">START TIME</string>
    <string name="hour_min">hour_min</string>
    <string name="end_time">end_time</string>
    <string name="mon">mon</string>
    <string name="tue">tue</string>
    <string name="wed">wed</string>
    <string name="thu">thu</string>
    <string name="fri">fri</string>
    <string name="sat">sat</string>
    <string name="sun">sun</string>
    <string name="reset">reset</string>
    <string name="create_class_schedule">create_class_schedule</string>
    <string name="mm">mm</string>
    <string name="dd">dd</string>
    <string name="yyyy">yyyy</string>
    <string name="create_gpa_planner">create_gpa_planner</string>
    <string name="how_many_grade_types_in_this_course">how_many_grade_types_in_this_course</string>
    <string name="how_much_grade">how_much_grade</string>
    <string name="how_much_grade_you_want">how_much_grade_you_want</string>
    <string name="number_of_grade_types">number_of_grade_types</string>
    <string name="grade_you_want">grade_you_want</string>
    <string name="quot_quot">quot_quot</string>
    <string name="grade_type">grade_type</string>
    <string name="coursetitle">coursetitle</string>
    <string name="earned_grade">earned_grade</string>
    <string name="grade_in_course">grade_in_course</string>
    <string name="get_result">get_result</string>
    <string name="save_result">save_result</string>
    <string name="type_university_collage_name">type_university_collage_name</string>
    <string name="add">add</string>
    <string name="add_info">add_info</string>
    <string name="note">Note</string>
    <string name="todo">TODO</string>
    <string name="add_record">Add Record</string>
    <string name="please_add_something">Please add something</string>
    <string name="type_password">type_password</string>
    <string name="type_your_username">type_your_username</string>
    <string name="retype_password">retype_password</string>
    <string name="register_account">register_account</string>
    <string name="go_to_next_page">go_to_next_page</string>
    <string name="select_your_term_from_below_dropdown_menu">select_your_term_from_below_dropdown_menu</string>
    <string name="register">register</string>
    <string name="password">password</string>
    <string name="sign_in">sign_in</string>
    <string name="delete_course">delete_course</string>
    <string name="course_name">course_name</string>
    <string name="picture">picture</string>
    <string name="enter_name_of_course">enter_name_of_course</string>
    <string name="grade_name">grade_name</string>
    <string name="grade_percent">grade_percent</string>
    <string name="grade">grade</string>
    <string name="_100">_100</string>
    <string name="textView">TextView</string>
    <string name="gpa_calculator">GPA Calculator</string>
    <string name="calender">Calender</string>
    <string name="notes">Notes</string>
    <string name="to_do_list">To_do_list</string>
    <string name="email_professor">Email Professor</string>
    <string name="new_class_exam">New Class/Exam</string>
    <string name="new_event_note">New Event/Note</string>
    <string name="courselist">courseList</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="message">Message:</string>
    <string name="send">send</string>
</resources>